<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorMainActivity"
    tools:context=".notification">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:id="@+id/toolbar1">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:src="@drawable/chevron_selected"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty"
                    android:src="@drawable/application_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Messages"
                    android:layout_marginLeft="@dimen/fifty"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/massagetext_size" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/txt1"
        android:layout_below="@+id/toolbar1"
        android:background="@drawable/button_recever">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/pic"
        android:id="@+id/noti_image"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/name_receiver"
        android:textStyle="bold"
        android:id="@id/noti_name"
        android:layout_toRightOf="@+id/noti_image"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/sender_time"
        android:layout_margin="10dp"
        android:id="@+id/time1"
        android:layout_toRightOf="@+id/noti_name"
        android:gravity="end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="45dp"
        android:text="@string/notifiaction"
        android:layout_toRightOf="@+id/noti_image"
        android:layout_below="@+id/noti_name"
        android:id="@+id/noti_mase"/>

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/noti_count"
            android:text="7"
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</LinearLayout>